[project]
name = "py-enforce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jahn Thomas Fidje", email = "jtfidje@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["coverage>=7.9.2", "pytest>=8.4.1"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F"]
unfixable = ["F401", "F841"]

[tool.pyright]
reportGeneralTypeIssues = false
venvPath = "."
venv = ".venv"

[tool.coverage.run]
omit = ["./tests/*"]
